--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "babel": "^5.8.29",
     "espower-babel": "^3.3.0",
     "mocha": "^2.3.3",
-    "power-assert": "^1.1.0",
-    "textlint-tester": "^0.2.1"
+    "power-assert": "^1.1.0"
   }
 }
