--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
   "version": "1.0.1",
   "description": "textstat plugin for japanese.",
   "main": "lib/index.js",
+  "files": [
+    "lib",
+    "src"
+  ],
   "directories": {
     "test": "test"
   },
